Update package dependencies to version 2.76.1 for Supabase libraries; add 'jose' library version 6.1.0; format VSCode settings and extensions for improved readability.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,4 +1,6 @@
 {
-  "recommendations": ["denoland.vscode-deno"],
+  "recommendations": [
+    "denoland.vscode-deno"
+  ],
   "unwantedRecommendations": []
 }
