lint and format

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 SUPABASE_URL=###
 SUPABASE_KEY=###
-OPENROUTER_API_KEY=###
+NODE_ENV=production #production,development
+SUPABASE_JWT_SECRET=###
+SUPABASE_SERVICE_ROLE_KEY=###
+PUBLIC_APP_URL=###
+PUBLIC_SUPABASE_URL=###
+PUBLIC_SUPABASE_KEY=###
+TTS_ENCRYPTION_KEY=###
