--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/node": "^24.7.2",
     "@typescript-eslint/eslint-plugin": "8.28.0",
     "@typescript-eslint/parser": "8.28.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "eslint": "9.23.0",
     "eslint-config-prettier": "10.1.1",
