Update CI and PR workflows to enforce job dependencies
- Added job dependencies to the CI and PR workflows, ensuring that the 'test' job runs after 'format' and 'lint', and the 'build' job runs after 'test'.
- This change improves the workflow execution order and ensures that all necessary checks are completed before building the project.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
 
   test:
     name: Run Tests
+    needs: [format, lint]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -66,6 +67,7 @@ jobs:
 
   build:
     name: Build
+    needs: [test]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
