--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -45,6 +45,7 @@ jobs:
 
   test:
     name: Run Tests
+    needs: [format, lint]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -72,6 +73,7 @@ jobs:
 
   build:
     name: Build
+    needs: [test]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
