Update ESLint configuration, GitHub Actions, and documentation
- Modified ESLint configuration to include additional config files in the node scripts setup.
- Adjusted GitHub Actions workflow conditions for Cloudflare deployment to simplify checks.
- Enhanced documentation with additional notes and formatting improvements for clarity.

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -98,7 +98,7 @@ jobs:
     name: Deploy to Cloudflare Pages (manual)
     needs: [test]
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'workflow_dispatch' && secrets.CF_API_TOKEN && secrets.CF_ACCOUNT_ID && vars.CF_PAGES_PROJECT_NAME }}
+    if: ${{ github.event_name == 'workflow_dispatch' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -116,6 +116,7 @@ jobs:
         run: ASTRO_ADAPTER=cloudflare npm run build
 
       - name: Deploy to Cloudflare Pages
+        if: ${{ secrets.CF_API_TOKEN != '' && secrets.CF_ACCOUNT_ID != '' && vars.CF_PAGES_PROJECT_NAME != '' }}
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
