--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -98,6 +98,7 @@ jobs:
     name: Deploy to Cloudflare Pages (manual)
     needs: [test]
     runs-on: ubuntu-latest
+    environment: production
     if: ${{ github.event_name == 'workflow_dispatch' }}
     steps:
       - name: Checkout code
@@ -116,7 +117,6 @@ jobs:
         run: ASTRO_ADAPTER=cloudflare npm run build
 
       - name: Deploy to Cloudflare Pages
-        if: ${{ secrets.CF_API_TOKEN != '' && secrets.CF_ACCOUNT_ID != '' && vars.CF_PAGES_PROJECT_NAME != '' }}
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
