Update GitHub Actions workflow to adjust job dependencies for Cloudflare deployment
- Changed the dependency for the manual deployment job from 'test' to 'build' to ensure proper execution order.

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -96,7 +96,7 @@ jobs:
 
   deploy_cloudflare_pages:
     name: Deploy to Cloudflare Pages (manual)
-    needs: [test]
+    needs: [build]
     runs-on: ubuntu-latest
     environment: production
     if: ${{ github.event_name == 'workflow_dispatch' }}
