Refine GitHub Actions workflow for Cloudflare deployment
- Updated the manual deployment job to only trigger on 'workflow_dispatch' events, ensuring it runs as intended when manually initiated.

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -97,9 +97,9 @@ jobs:
   deploy_cloudflare_pages:
     name: Deploy to Cloudflare Pages (manual)
     needs: [build]
+    if: github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     environment: production
-    if: ${{ github.event_name == 'workflow_dispatch' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
