--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -96,7 +96,7 @@ jobs:
 
   deploy_cloudflare_pages:
     name: Deploy to Cloudflare Pages (manual)
-    if: github.event_name == 'workflow_dispatch'
+    needs: [build]
     runs-on: ubuntu-latest
     environment: production
     steps:
