--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "husky": "9.1.7",
     "lint-staged": "15.5.0",
     "prettier-plugin-astro": "0.14.1",
+    "sharp": "^0.34.5",
     "supabase": "^2.48.3",
     "typescript-eslint": "8.28.0",
     "vitest": "^3.2.4"
