--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -107,6 +107,10 @@ jobs:
       # if you use server-side access:
       SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
       SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+      # Service role key for job processing and storage operations (bypasses RLS) - also needs to be set in Cloudflare Pages dashboard for runtime
+      SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+      # TTS encryption key (64-character hex string) - also needs to be set in Cloudflare Pages dashboard for runtime
+      TTS_ENCRYPTION_KEY: ${{ secrets.TTS_ENCRYPTION_KEY }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
