Add debug step for TTS_ENCRYPTION_KEY length in CI workflow
- Introduced a new step in the GitHub Actions workflow to log the length of the TTS_ENCRYPTION_KEY environment variable, aiding in debugging and ensuring proper configuration during CI runs.

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -115,6 +115,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Debug TTS_ENCRYPTION_KEY length
+        run: node -e "console.log('TTS len:', (process.env.TTS_ENCRYPTION_KEY || '').length)"
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
