--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -137,4 +137,4 @@ jobs:
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACCOUNT_ID }}
-          command: pages deploy ./dist --project-name=${{ vars.CF_PAGES_PROJECT_NAME }}
+          command: pages deploy ./dist --project-name=phrase-follower
