--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -94,11 +94,67 @@ jobs:
           path: dist/
           retention-days: 1
 
+  # Deploy to DigitalOcean Droplet via Docker + GHCR
+  deploy_digitalocean:
+    name: Deploy to DigitalOcean Droplet
+    needs: [build]
+    runs-on: ubuntu-latest
+    environment: production
+    if: github.ref == 'refs/heads/master' && github.event_name != 'pull_request'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.repository }}
+          tags: |
+            type=ref,event=branch
+            type=sha,prefix={{branch}}-
+            type=raw,value=latest,enable={{is_default_branch}}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Deploy to DigitalOcean Droplet via SSH
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.DROPLET_HOST }}
+          username: ${{ secrets.DROPLET_USER }}
+          key: ${{ secrets.DROPLET_SSH_KEY }}
+          script: |
+            cd /opt/phrase-follower
+            docker compose pull
+            docker compose up -d
+            docker compose ps
+
+  # Cloudflare Pages deployment - disabled by default
+  # Uncomment and set ENABLE_CLOUDFLARE_DEPLOY=true in repository secrets to enable
   deploy_cloudflare_pages:
     name: Deploy to Cloudflare Pages
     needs: [build]
     runs-on: ubuntu-latest
     environment: production
+    if: github.ref == 'refs/heads/master' && github.event_name != 'pull_request' && secrets.ENABLE_CLOUDFLARE_DEPLOY == 'true'
     env:
       # or keep your ASTRO_ADAPTER=cloudflare
       CF_PAGES: "1"
