Update Docker and GitHub Actions configurations for Supabase integration
- Added build arguments for Supabase environment variables in the Dockerfile to ensure proper configuration during the build process.
- Updated the GitHub Actions workflow to pass Supabase environment variables as build arguments, enhancing deployment flexibility.
- Modified the Supabase client initialization to improve error handling and compatibility with both browser and Node.js environments, ensuring a more robust setup.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     # Image name should be set via environment variable or replace with your actual GHCR path
     # Example: ghcr.io/your-username/10x-phrase-follower:latest
     image: ${DOCKER_IMAGE:-ghcr.io/phasmam/10x-phrase-follower:latest}
+    # image: phrase-follower:local # zamiast ghcr.io/...
     container_name: phrase-follower
     restart: unless-stopped
     ports:
