--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build",
+    "build": "astro build && npm run copy-silence-asset",
+    "copy-silence-asset": "node -e \"const fs=require('fs');const path=require('path');const src=path.join(process.cwd(),'src/assets/silence-800ms.mp3');const dest=path.join(process.cwd(),'dist/assets/silence-800ms.mp3');if(fs.existsSync(src)){fs.mkdirSync(path.dirname(dest),{recursive:true});fs.copyFileSync(src,dest);console.log('Copied silence file to',dest);}else{console.warn('Silence file not found at',src);}\"",
     "preview": "astro preview",
     "astro": "astro",
     "lint": "eslint .",
@@ -24,11 +25,16 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@supabase/supabase-js": "^2.76.1",
     "@tailwindcss/vite": "^4.1.13",
+    "@types/archiver": "^7.0.0",
+    "@types/fluent-ffmpeg": "^2.1.28",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
+    "archiver": "^7.0.1",
     "astro": "^5.13.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ffmpeg-static": "^5.3.0",
+    "fluent-ffmpeg": "^2.1.3",
     "jose": "^6.1.0",
     "lucide-react": "^0.487.0",
     "react": "^19.1.1",
